tests/baselines/reference/functionConstraintSatisfaction3.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts(48,6): error TS2345: Argument of type '(x: string, y: string) => string' is not assignable to parameter of type '(x: string, y: number) => string'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts(49,7): error TS2345: Argument of type '(x: string, y: string) => string' is not assignable to parameter of type '(x: string, y: number) => string'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts(55,12): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts(56,11): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts(64,17): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/functionConstraintSatisfaction3.ts (5 errors) ====
    // satisfaction of a constraint to Function, no errors expected
    
    function foo<T extends (x: string) => string>(x: T): T { return x; }
    
    interface I {
        (): string;
    }
    var i: I;
    
    class C {
        foo: string;
    }
    
    var a: { (): string };
    var b: { new (): string };
    var c: { (): string; (x): string };
    
    var r1 = foo((x) => x);
    var r2 = foo((x: string) => x);
    var r3 = foo(function (x) { return x });
    var r4 = foo(function (x: string) { return x });
    var r5 = foo(i);
    var r8 = foo(c);
    
    interface I2<T> {
        (x: T): T;
    }
    var i2: I2<string>;
    
    class C2<T> {
        foo: T;
    }
    
    var a2: { <T>(x: T): T };
    var b2: { new <T>(x: T): T };
    var c2: { <T>(x: T): T; <T>(x: T, y: T): T };
    
    var r9 = foo(function <U>(x: U) { return x; });
    var r10 = foo(<U extends string>(x: U) => x);
    var r12 = foo(i2);
    var r15 = foo(c2);
    
    declare function id2<T>(x: T, y: T): T;
    
    declare function boom<R>(f: (x: string, y: number) => R): R;
    declare function boom2(f: (x: string, y: number) => string): void;
    
    boom(id2);  // Should be an error T = [string, number]
         ~~~
!!! error TS2345: Argument of type '(x: string, y: string) => string' is not assignable to parameter of type '(x: string, y: number) => string'.
!!! error TS2345:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    boom2(id2); // Should be an error T = [string, number]
          ~~~
!!! error TS2345: Argument of type '(x: string, y: string) => string' is not assignable to parameter of type '(x: string, y: number) => string'.
!!! error TS2345:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    
    declare function withNum<N extends number>(x: N): N;
    declare function withString<S extends string>(f: (x: S) => S): void;
    declare function useString(f: (x: string) => string): void;
    
    withString(withNum);  // Error
               ~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
    useString(withNum);   // Error
              ~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
    
    declare function okay<R>(f: (x: 1, y: number) => R): R;
    declare function transitive<T>(x: T, f: (x: T) => T): void;
    
    okay(id2);
    
    transitive(1, withNum);
    transitive('1', withNum);
                    ~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
    